# mvp

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  books4all_resume_profile.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_jti_and_version.py  20241209_001_initial.py  20251229_1912_239688c9b228_initial_schema.py  20260320_1308_656108e78ec1_change_shipping_address_to_json.py
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  logging_config.py  secrets.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  keys.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  base.py  book.py  message.py  order.py  review.py  user.py
backend/app/repositories/: __init__.py  base.py  book.py  message.py  order.py  review.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  book.py  error.py  message.py  order.py  pagination.py  review.py  user.py
backend/app/services/: __init__.py  auth_service.py  book_service.py  exceptions.py  order_service.py  payment_service.py  storage.py
backend/temp_dev/: migration.sql
backend/tests/: conftest.py
backend/tests/DB/: test_books.py  test_db_basic.py  test_session_lifecycle.py  test_users.py
backend/tests/integration/: test_async_patterns.py  test_auth_api.py  test_books_api.py  test_error_handling.py  test_orders_api.py  (+3 more)
(+346 files in other folders)
